--- a/ControlStatements.html
+++ b/ControlStatements.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>OPERATORS</title>
+	<title>CONTROL STATEMENTS</title>
 	<style type="text/css">
 		*{
 			background-color: #ccc;
@@ -25,7 +25,7 @@
 	</style>
 </head>
 <body>
-	<h1>Control Statements in Javascript Program</h1>
+	<h1>Conditional Statements in Javascript</h1>
 </body>
 <script type="text/javascript" src="controlStatements.js"></script>
 </html>
