input js src added

--- a/InputFields.html
+++ b/InputFields.html
@@ -29,6 +29,7 @@
         }
 
 	</style>
+    <script type="text/javascript" src="InputFields.js" defer></script>
 </head>
 <body>
 	<h1>Taking Input from the user</h1>
@@ -59,5 +60,5 @@
         <button onclick="submitcar()">SUBMIT</button>
     </div> 
 </body>
-<script type="text/javascript" src="InputFields.js"></script>
+
 </html>
