operators and loops learining

--- a/variables.html
+++ b/variables.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JAVASCRIPT LEARNING</title>
 </head>
 <body>
     <div style="text-align: center;">
@@ -12,7 +12,7 @@
     </div>
 
     <h2>Notes</h3>
-    <h3>Topic : Variables and Data Types</h3>
+    <h3>Topic 1 : Variables and Data Types</h3>
     <div>
         <h4>VARIABLES - </h4>
         <p> Variables is the container to store the data.</p>
@@ -52,5 +52,5 @@
         <p> ro access the object can use <b> object.key </b> or <b>object["key"]</b></p>
     </div>
 </body>
-<script src="firstScript.js"></script>
+<script src="variables.js"></script>
 </html>
