practice and new topics covered - javascript

--- a/strings.html
+++ b/strings.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loops and Strings</title>
+    <title>Strings</title>
 </head>
 <body>
     <div style="text-align: center;">
@@ -12,19 +12,7 @@
     </div>
 
     <h2>Notes</h3>
-    <h3>Topic 3 : Loops and Strings</h3>
-    <div>
-        <h4>Loops in JS -</h4>
-        <p> Loops are used to exceute a piece of code again and again.</p>
-        <ul>
-            <li>for loop</li>
-            <li>while loop -> same as for loop</li>
-            <li>do-while loop</li>
-            <li>for-of loop</li>
-            <li>for-in loop</li>
-        </ul>
-    </div>
-
+    <h3>Topic 4 : Strings</h3>
     <div>
         <h4>Strings in JS -</h4>
         <p> Strings are the sequence of characters used to represent the text.</p>
@@ -39,8 +27,8 @@
                 <span>str[0], str[1], str[2]</span>
             </li>
         </ul>
-        <h5>Template Literals (`)</h5>
+        <h4>Template Literals (`)</h4>
     </div>
-    <script src="loops.js"></script>
+    <script src="strings.js"></script>
 </body>
 </html>
