--- a/PracticeQuestions/addTwoNumbers.html
+++ b/PracticeQuestions/addTwoNumbers.html
@@ -8,15 +8,28 @@
 <body>
     
     <script>
-        document.write("Program with static Numbers");
-        let a = 5;
-        let b = 7;
-        let c = a + b;
-        document.write(`sum of ${a} + ${b} = ${c}`)
-        document.write("<br> Program with dynamic Numbers")
-        let num1 = parseInt(prompt("enter value of num1"));
-        let num2 = parseInt(prompt("enter value of num2"));
-        document.write(`sum of the entered numbers ${num1} + ${num2} = ${num1 + num2}`)
+        // document.write("Program with static Numbers");
+        // let a = 5;
+        // let b = 7;
+        // let c = a + b;
+        // document.write(`sum of ${a} + ${b} = ${c}`)
+        // document.write("<br> Program with dynamic Numbers")
+        // let num1 = parseInt(prompt("enter value of num1"));
+        // let num2 = parseInt(prompt("enter value of num2"));
+        // document.write(`sum of the entered numbers ${num1} + ${num2} = ${num1 + num2}`)
+
+        n = 5;
+        let num = 1;
+        let currentChar = "A";
+        debugger;
+        for (let i = 1; i < n; i++) {
+        for (let j = 1; j <= i; j++) {
+            console.log(currentChar + " ");
+            currentChar++;
+        }
+        console.log(`</br>`);
+        num++;
+        }
     </script>
 </body>
 </html>
